[package]
name = "mycli"
version = "0.6.1"
edition = "2024"

[features]
default = []
repl = ["dep:rustyline"]
args = ["dep:clap"]
menu = []

[dependencies]
rustyline = { version = "17.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }

[dev-dependencies]
tempfile = "3.23.0"
